--- a/YukariMaths/CMakeLists.txt
+++ b/YukariMaths/CMakeLists.txt
@@ -6,9 +6,7 @@ add_library (
   ${PROJECT_NAME}
   ${CMAKE_CURRENT_SOURCE_DIR}/Matrix.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Quaternion.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/Vector.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/IMUFrame.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/ExtendedIMUFrame.cpp )
+  ${CMAKE_CURRENT_SOURCE_DIR}/Vector.cpp )
 
 include ( AddTests )
 AddTests ( ${PROJECT_NAME} )
