--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,9 +35,15 @@ set ( Boost_USE_MULTITHREADED ON )
 find_package ( Boost REQUIRED
                COMPONENTS system filesystem unit_test_framework )
 
+# External library: PCL
+find_package ( PCL 1.6 REQUIRED )
+link_directories ( ${PCL_LIBRARY_DIRS} )
+add_definitions ( ${PCL_DEFINITIONS} )
+
 # Includes
 include_directories ( ${CMAKE_CURRENT_SOURCE_DIR}
                       ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty
+					  ${PCL_INCLUDE_DIRS}
 					  ${Boost_INCLUDE_DIRS} )
 
 # Libraries
