math lib refactoring

--- a/YukariMaths/CMakeLists.txt
+++ b/YukariMaths/CMakeLists.txt
@@ -4,10 +4,10 @@ project ( YukariMaths )
 
 add_library (
   ${PROJECT_NAME}
-  ${CMAKE_CURRENT_SOURCE_DIR}/BaseMathType.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Matrix.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Quaternion.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/Vector.cpp )
+  ${CMAKE_CURRENT_SOURCE_DIR}/Vector3.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Vector4.cpp )
 
 include ( AddTests )
 AddTests ( ${PROJECT_NAME} )
