--- a/YukariIMU/CMakeLists.txt
+++ b/YukariIMU/CMakeLists.txt
@@ -6,13 +6,16 @@ add_library (
   ${PROJECT_NAME}
   ${CMAKE_CURRENT_SOURCE_DIR}/IMUFrame.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ExtendedIMUFrame.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/MSPGrabber.cpp )
+  ${CMAKE_CURRENT_SOURCE_DIR}/MSPGrabber.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/MSPClient.cpp )
 
 target_link_libraries (
   ${PROJECT_NAME}
   LINK_PUBLIC
-  YukariMaths )
+  YukariMaths
+  serial )
 
 include ( AddTests )
 AddTests ( ${PROJECT_NAME}
-           YukariMaths )
+           YukariMaths
+           serial )
