--- a/YukariIMU/CMakeLists.txt
+++ b/YukariIMU/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library (
   ${PROJECT_NAME}
   ${CMAKE_CURRENT_SOURCE_DIR}/IMUFrame.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ExtendedIMUFrame.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/MSPGrabber.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/MSPGrabberIMU.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/MSPGrabberAttitude.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/MSPClient.cpp )
