Tidy CMake files

--- a/KinectTestApp/CMakeLists.txt
+++ b/KinectTestApp/CMakeLists.txt
@@ -1,13 +1,8 @@
-cmake_minimum_required ( VERSION 2.8 )
+project(KinectTestApp)
 
-project ( KinectTestApp )
+add_executable(${PROJECT_NAME}
+  ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
 
-add_executable (
-  ${PROJECT_NAME}
-  ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp )
-
-target_link_libraries (
-  ${PROJECT_NAME}
-  LINK_PUBLIC
+target_link_libraries(${PROJECT_NAME} LINK_PUBLIC
   YukariCommon
-  ${PCL_LIBRARIES} )
+  ${PCL_LIBRARIES})
