--- a/YukariCommon/CMakeLists.txt
+++ b/YukariCommon/CMakeLists.txt
@@ -1,13 +1,8 @@
-cmake_minimum_required ( VERSION 2.8 )
+project(YukariCommon)
 
-project ( YukariCommon )
-
-add_library (
-  ${PROJECT_NAME}
+add_library(${PROJECT_NAME}
   ${CMAKE_CURRENT_SOURCE_DIR}/ConfigurationManager.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/LoggingService.cpp )
+  ${CMAKE_CURRENT_SOURCE_DIR}/LoggingService.cpp)
 
-target_link_libraries (
-  ${PROJECT_NAME}
-  LINK_PUBLIC
-  ${Boost_LIBRARIES} )
+target_link_libraries(${PROJECT_NAME} LINK_PUBLIC
+  ${Boost_LIBRARIES})
