--- a/YukariMaths/CMakeLists.txt
+++ b/YukariMaths/CMakeLists.txt
@@ -1,14 +1,11 @@
-cmake_minimum_required ( VERSION 2.8 )
+project(YukariMaths)
 
-project ( YukariMaths )
-
-add_library (
-  ${PROJECT_NAME}
+add_library(${PROJECT_NAME}
   ${CMAKE_CURRENT_SOURCE_DIR}/Matrix3.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Matrix4.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Quaternion.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Vector3.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/Vector4.cpp )
+  ${CMAKE_CURRENT_SOURCE_DIR}/Vector4.cpp)
 
-include ( AddTests )
-AddTests ( ${PROJECT_NAME} )
+include(AddTests)
+AddTests(${PROJECT_NAME})
