--- a/IMUDeviceTest/CMakeLists.txt
+++ b/IMUDeviceTest/CMakeLists.txt
@@ -5,4 +5,5 @@ add_executable(${PROJECT_NAME}
 
 target_link_libraries(${PROJECT_NAME} LINK_PUBLIC
   YukariIMU
-  serial)
+  serial
+  ${VTK_LIBRARIES})
