--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,18 +20,19 @@ set(Boost_NO_BOOST_CMAKE TRUE)
 set(Boost_NO_SYSTEM_PATHS TRUE)
 set(Boost_DETAILED_FAILURE_MSG ON)
 
-# External library: PCL
-find_package(PCL 1.6 REQUIRED)
-link_directories(${PCL_LIBRARY_DIRS})
-add_definitions(${PCL_DEFINITIONS})
-
 # External library: Boost
 set(Boost_USE_STATIC_LIBS ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
 set(Boost_USE_MULTITHREADED ON)
 find_package(Boost REQUIRED
-  COMPONENTS system filesystem unit_test_framework serialization thread date_time iostreams chrono mpi)
+  COMPONENTS system filesystem unit_test_framework serialization thread date_time iostreams chrono)
 
+# External library: PCL
+set(BOOST_INCLUDEDIR "${Boost_INCLUDE_DIR}")
+find_package(PCL 1.6 REQUIRED)
+link_directories(${PCL_LIBRARY_DIRS})
+add_definitions(${PCL_DEFINITIONS})
+  
 if(UNIX)
   list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
   list(REMOVE_ITEM VTK_LIBRARIES "vtkproj4")
