--- a/IMUDeviceTestApp/CMakeLists.txt
+++ b/IMUDeviceTestApp/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(${PROJECT_NAME}
   ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/VTKIMUActorCallback.cpp)
 
-target_link_libraries(${PROJECT_NAME} LINK_PUBLIC
+target_link_libraries(${PROJECT_NAME}
   YukariCommon
   YukariIMU
   serial
