--- a/YukariCaptureApp/CMakeLists.txt
+++ b/YukariCaptureApp/CMakeLists.txt
@@ -3,6 +3,6 @@ project(YukariCaptureApp)
 add_executable(${PROJECT_NAME}
   ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
 
-target_link_libraries(${PROJECT_NAME} LINK_PUBLIC
+target_link_libraries(${PROJECT_NAME}
   YukariCommon
   YukariMaths)
