--- a/YukariCommon/CMakeLists.txt
+++ b/YukariCommon/CMakeLists.txt
@@ -4,5 +4,5 @@ add_library(${PROJECT_NAME}
   ${CMAKE_CURRENT_SOURCE_DIR}/ConfigurationManager.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/LoggingService.cpp)
 
-target_link_libraries(${PROJECT_NAME} LINK_PUBLIC
+target_link_libraries(${PROJECT_NAME}
   ${Boost_LIBRARIES})
