--- a/IMUDeviceTestApp/CMakeLists.txt
+++ b/IMUDeviceTestApp/CMakeLists.txt
@@ -9,3 +9,5 @@ target_link_libraries(${PROJECT_NAME}
   YukariIMU
   serial
   ${VTK_LIBRARIES})
+  
+set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Executables)
