--- a/KinectTestApp/CMakeLists.txt
+++ b/KinectTestApp/CMakeLists.txt
@@ -6,3 +6,5 @@ add_executable(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME}
   YukariCommon
   ${PCL_LIBRARIES})
+
+set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Executables)
