--- a/YukariMaths/CMakeLists.txt
+++ b/YukariMaths/CMakeLists.txt
@@ -9,3 +9,5 @@ add_library(${PROJECT_NAME}
 
 include(AddTests)
 AddTests(${PROJECT_NAME})
+
+set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Libraries)
