--- a/Executables/CloudGrabberTestApp/CMakeLists.txt
+++ b/Executables/CloudGrabberTestApp/CMakeLists.txt
@@ -1,7 +1,8 @@
 project(CloudGrabberTestApp)
 
 add_executable(${PROJECT_NAME}
-  ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
+  main.cpp
+  CloudGrabberVisualisation.cpp)
 
 target_link_libraries(${PROJECT_NAME}
   YukariCommon
