--- a/Libraries/YukariCommon/CMakeLists.txt
+++ b/Libraries/YukariCommon/CMakeLists.txt
@@ -2,11 +2,13 @@ project(YukariCommon)
 
 set(HEADERS
   ConfigurationManager.h
-  LoggingService.h)
+  LoggingService.h
+  SignalBroker.h)
 
 set(SOURCES
   ConfigurationManager.cpp
-  LoggingService.cpp)
+  LoggingService.cpp
+  SignalBroker.cpp)
 
 add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 
