--- a/Executables/YukariCaptureApp/CMakeLists.txt
+++ b/Executables/YukariCaptureApp/CMakeLists.txt
@@ -17,7 +17,11 @@ set(SOURCES
 add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
+  YukariCloudCapture
   YukariCommon
-  YukariMaths)
+  YukariIMU
+  YukariMaths
+  serial
+  ${PCL_LIBRARIES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Executables)
