Add a basic PCD viewer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ add_subdirectory(Libraries/YukariProcessing)
 # Executables
 add_subdirectory(Executables/CloudGrabberTestApp)
 add_subdirectory(Executables/IMUGrabberTestApp)
+add_subdirectory(Executables/PCDViewer)
 add_subdirectory(Executables/YukariCaptureApp)
 
 # Docs
