--- a/resources/config_default.json
+++ b/resources/config_default.json
@@ -4,7 +4,8 @@
     "sinks":
     [
       {
-        "type": "console"
+        "type": "console",
+		"level": "trace"
       },
       {
         "type": "file_simple",
