Basic integration for position
Re #13

--- a/Libraries/YukariIMU/CMakeLists.txt
+++ b/Libraries/YukariIMU/CMakeLists.txt
@@ -3,6 +3,7 @@ project(YukariIMU)
 set(HEADERS
   DummyIMUGrabber.h
   IIMUGrabber.h
+  IMUConstants.h
   IMUFrame.h
   ExtendedIMUFrame.h
   MSPGrabber.h
