Add property for data processing

--- a/Libraries/YukariProcessing/CMakeLists.txt
+++ b/Libraries/YukariProcessing/CMakeLists.txt
@@ -1,10 +1,12 @@
 project(YukariProcessing)
 
 set(HEADERS
-  IAlgorithm.h)
+  IAlgorithm.h
+  Property.h)
 
 set(SOURCES
-  IAlgorithm.cpp)
+  IAlgorithm.cpp
+  Property.cpp)
 
 add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 
@@ -12,5 +14,8 @@ target_link_libraries(${PROJECT_NAME}
   YukariCommon
   YukariIMU
   ${PCL_LIBRARIES})
+
+include(AddTests)
+AddTests(${PROJECT_NAME})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Libraries)
