--- a/Libraries/YukariProcessing/CMakeLists.txt
+++ b/Libraries/YukariProcessing/CMakeLists.txt
@@ -8,14 +8,18 @@ set(SOURCES
   IAlgorithm.cpp
   Property.cpp)
 
-add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
-
-target_link_libraries(${PROJECT_NAME}
+set(LIB_DEPS
   YukariCommon
   YukariIMU
   ${PCL_LIBRARIES})
 
+set(TESTS
+  test/PropertyTest.cpp)
+
+add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
+target_link_libraries(${PROJECT_NAME} ${LIB_DEPS})
+
 include(AddTests)
-AddTests(${PROJECT_NAME})
+AddTests(${PROJECT_NAME} TESTS LIB_DEPS)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Libraries)
