--- a/Libraries/YukariCLI/CMakeLists.txt
+++ b/Libraries/YukariCLI/CMakeLists.txt
@@ -10,12 +10,16 @@ set(SOURCES
   CLI.cpp
   CommandContainer.cpp)
 
-add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
-
-target_link_libraries(${PROJECT_NAME}
+set(LIB_DEPS
   YukariCommon)
 
+set(TESTS
+  test/CLITest.cpp)
+
+add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
+target_link_libraries(${PROJECT_NAME} ${LIB_DEPS})
+
 include(AddTests)
-AddTests(${PROJECT_NAME})
+AddTests(${PROJECT_NAME} TESTS LIB_DEPS)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Libraries)
