--- a/Libraries/YukariCloudCapture/CMakeLists.txt
+++ b/Libraries/YukariCloudCapture/CMakeLists.txt
@@ -9,10 +9,11 @@ set(SOURCES
   DummyCloudGrabber.cpp
   OpenNI2CloudGrabber.cpp)
 
-add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
-
-target_link_libraries(${PROJECT_NAME}
+set(LIB_DEPS
   YukariCommon
   ${PCL_LIBRARIES})
+
+add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
+target_link_libraries(${PROJECT_NAME} ${LIB_DEPS})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Libraries)
