--- a/Libraries/YukariAlgorithms/CMakeLists.txt
+++ b/Libraries/YukariAlgorithms/CMakeLists.txt
@@ -3,12 +3,16 @@ project(YukariAlgorithms)
 set(HEADERS
   ApplyTransformationToCloud.h
   ConcatenatePointClouds.h
-  IMUFrameToEigenTransformation.h)
+  IMUFrameToEigenTransformation.h
+  LoadPointCloud.h
+  TriangulatePointCloud.h)
 
 set(SOURCES
   ApplyTransformationToCloud.cpp
   ConcatenatePointClouds.cpp
-  IMUFrameToEigenTransformation.cpp)
+  IMUFrameToEigenTransformation.cpp
+  LoadPointCloud.cpp
+  TriangulatePointCloud.cpp)
 
 set(LIB_DEPS
   YukariCommon
@@ -18,7 +22,9 @@ set(LIB_DEPS
 set(TESTS
   test/ApplyTransformationToCloudTest.cpp
   test/ConcatenatePointCloudsTest.cpp
-  test/IMUFrameToEigenTransformationTest.cpp)
+  test/IMUFrameToEigenTransformationTest.cpp
+  test/LoadPointCloudCloudTest.cpp
+  test/TriangulatePointCloudTest.cpp)
 
 add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${LIB_DEPS})
