--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,11 @@ enable_testing()
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
+# No min/max macros from MSVC
 add_definitions(-DNOMINMAX)
+
+# Fixes issues with PCL/boost on Ubuntu 14.04 when compiled in Debug mode
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1")
 
 # All warnings
 include(EnableExtraCompilerWarnings)
@@ -38,8 +42,10 @@ find_package(Boost REQUIRED
   COMPONENTS system filesystem unit_test_framework serialization thread date_time iostreams chrono program_options regex)
 
 if(UNIX)
+  # This fixed an issue, I seem to recall it was a runetime issue
   list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
   list(REMOVE_ITEM VTK_LIBRARIES "vtkproj4")
+
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x -pthread")
 endif()
 
