--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ add_subdirectory(ThirdParty/serial)
 
 # Libraries
 add_subdirectory(Libraries/YukariAlgorithms)
+add_subdirectory(Libraries/YukariCaptureTriggers)
 add_subdirectory(Libraries/YukariCLI)
 add_subdirectory(Libraries/YukariCloudCapture)
 add_subdirectory(Libraries/YukariCommon)
