Add files for MSP trigger

--- a/Libraries/YukariCaptureTriggers/CMakeLists.txt
+++ b/Libraries/YukariCaptureTriggers/CMakeLists.txt
@@ -3,17 +3,21 @@ project(YukariCaptureTriggers)
 set(HEADERS
   CLITrigger.h
   ITrigger.h
+  MSPAUXTrigger.h
   SignalTrigger.h
   TimelapseCaptureTrigger.h)
 
 set(SOURCES
   CLITrigger.cpp
+  MSPAUXTrigger.cpp
   SignalTrigger.cpp
   TimelapseCaptureTrigger.cpp)
 
 set(LIB_DEPS
   YukariCLI
-  YukariCommon)
+  YukariCommon
+  YukariIMU
+  serial)
 
 add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${LIB_DEPS})
