--- a/TeensyIMUDevice/platformio.ini
+++ b/TeensyIMUDevice/platformio.ini
@@ -1,4 +1,6 @@
 [env:imu_device]
-framework=arduino
-platform=teensy
-board=teensy31
+framework = arduino
+platform = teensy
+board = teensy31
+build_flags = -DGYRO_SAMPLE_FREQ=1000.0f -DACCEL_SAMPLE_FREQ=100.0f -DMAG_SAMPLE_FREQ=100.0f
+
