Start removing bloated framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,8 +74,8 @@ add_subdirectory(Libraries/YukariProcessing)
 add_subdirectory(Executables/CloudGrabberTestApp)
 add_subdirectory(Executables/IMUGrabberTestApp)
 add_subdirectory(Executables/PCDViewer)
+add_subdirectory(Executables/PCDToMesh)
 add_subdirectory(Executables/YukariCaptureApp)
-add_subdirectory(Executables/YukariProcessingApp)
 
 # Docs
 add_doxygen(
