--- a/Libraries/YukariCommon/CMakeLists.txt
+++ b/Libraries/YukariCommon/CMakeLists.txt
@@ -3,25 +3,17 @@ project(YukariCommon)
 set(HEADERS
   ConfigurationManager.h
   LoggingService.h
-  SignalBroker.h
-  StringValueConversion.h)
+  SignalBroker.h)
 
 set(SOURCES
   ConfigurationManager.cpp
   LoggingService.cpp
-  SignalBroker.cpp
-  StringValueConversion.cpp)
+  SignalBroker.cpp)
 
 set(LIB_DEPS
   ${Boost_LIBRARIES})
 
-set(TESTS
-  test/StringValueConversionTest.cpp)
-
 add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${LIB_DEPS})
-
-include(AddTests)
-AddTests(${PROJECT_NAME} TESTS LIB_DEPS)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Libraries)
