Refactor executable projects

--- a/Executables/PointCloudAlignment/CMakeLists.txt
+++ b/Executables/PointCloudAlignment/CMakeLists.txt
@@ -1,17 +1,13 @@
-project(CloudGrabberTestApp)
+project(PointCloudAlignment)
 
-set(HEADERS
-  CloudGrabberVisualisation.h)
+set(HEADERS)
 
 set(SOURCES
-  CloudGrabberVisualisation.cpp
   main.cpp)
 
 add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
-  YukariCommon
-  YukariCloudCapture
-  ${PCL_LIBRARIES})
+  YukariCommon)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Executables)
