remove algorithm bloat

--- a/Libraries/YukariProcessing/CMakeLists.txt
+++ b/Libraries/YukariProcessing/CMakeLists.txt
@@ -1,31 +1,24 @@
 project(YukariProcessing)
 
 set(HEADERS
-  DataStore.h
-  IAlgorithm.h
-  Property.h
-  PropertyMapping.h)
+  CloudOperations.h
+  GenerateMeshFromPointCloud.h)
 
 set(SOURCES
-  DataStore.cpp
-  IAlgorithm.cpp
-  PropertyMapping.cpp)
+  CloudOperations.cpp
+  GenerateMeshFromPointCloud.cpp)
 
 set(LIB_DEPS
   YukariCommon
   YukariIMU
   ${PCL_LIBRARIES})
 
-set(TESTS
-  test/DataStoreTest.cpp
-  test/IAlgorithmTest.cpp
-  test/PropertyMappingTest.cpp
-  test/PropertyTest.cpp)
+#set(TESTS)
 
 add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${LIB_DEPS})
 
-include(AddTests)
-AddTests(${PROJECT_NAME} TESTS LIB_DEPS)
+#include(AddTests)
+#AddTests(${PROJECT_NAME} TESTS LIB_DEPS)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Libraries)
