--- a/TeensyIMUDevice/platformio.ini
+++ b/TeensyIMUDevice/platformio.ini
@@ -2,5 +2,5 @@
 framework = arduino
 platform = teensy
 board = teensy31
-build_flags = -DDEBUG -DGYRO_SAMPLE_FREQ=1000.0f -DACCEL_SAMPLE_FREQ=100.0f -DMAG_SAMPLE_FREQ=100.0f
+build_flags = -DDEBUG -DDEBUG_SERIAL=Serial -DDEBUG_BAUD=9600 -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DDISABLE_SENSORS
 
