--- a/Executables/IMUGrabberTest/CMakeLists.txt
+++ b/Executables/IMUGrabberTest/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 target_link_libraries(${PROJECT_NAME}
   YukariCommon
   YukariIMU
+  YukariMSP
   serial
   ${VTK_LIBRARIES})
 
