--- a/TeensyIMUDevice/platformio.ini
+++ b/TeensyIMUDevice/platformio.ini
@@ -1,6 +1,11 @@
-[env:imu_device]
+[env:debug]
 framework = arduino
 platform = teensy
 board = teensy31
-build_flags = -DDEBUG -DDEBUG_SERIAL=Serial -DDEBUG_BAUD=9600 -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DDISABLE_SENSORS
+build_flags = -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DDEBUG -DDEBUG_SERIAL=Serial -DDEBUG_BAUD=9600
 
+[env:release]
+framework = arduino
+platform = teensy
+board = teensy31
+build_flags = -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200
