--- a/TeensyIMUDevice/platformio.ini
+++ b/TeensyIMUDevice/platformio.ini
@@ -8,4 +8,10 @@ build_flags = -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DGPS_SERIAL=Serial3 -DGPS_
 framework = arduino
 platform = teensy
 board = teensy31
-build_flags = -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DGPS_SERIAL=Serial3 -DGPS_BAUD=115200
+build_flags = -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DGPS_SERIAL=Serial3 -DGPS_BAUD=9600
+
+[env:gps_dev]
+framework = arduino
+platform = teensy
+board = teensy31
+build_flags = -DMSP_SERIAL=Serial2 -DMSP_BAUD=115200 -DGPS_SERIAL=Serial3 -DGPS_BAUD=9600 -DDISABLE_IMU -DDISABLE_BARO -DDEBUG -DDEBUG_SERIAL=Serial -DDEBUG_BAUD=9600
