--- a/Libraries/YukariProcessing/CMakeLists.txt
+++ b/Libraries/YukariProcessing/CMakeLists.txt
@@ -11,12 +11,14 @@ set(LIB_DEPS
   YukariIMU
   ${PCL_LIBRARIES})
 
-#set(TESTS)
+set(TESTS
+  test/CloudOperationsTest.cpp
+  test/GenerateMeshFromPointCloudTest.cpp)
 
 add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${LIB_DEPS})
 
-#include(AddTests)
-#AddTests(${PROJECT_NAME} TESTS LIB_DEPS)
+include(AddTests)
+AddTests(${PROJECT_NAME} TESTS LIB_DEPS)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Libraries)
