--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ add_subdirectory(ThirdParty/serial)
 # Libraries
 add_subdirectory(Libraries/YukariCaptureTriggers)
 add_subdirectory(Libraries/YukariCLI)
+add_subdirectory(Libraries/YukariCloudCapture)
 add_subdirectory(Libraries/YukariCommon)
 add_subdirectory(Libraries/YukariIMU)
 add_subdirectory(Libraries/YukariMaths)
