--- a/Executables/CloudGrabberTest/CMakeLists.txt
+++ b/Executables/CloudGrabberTest/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
   YukariCommon
+  YukariCloudCapture
   ${PCL_LIBRARIES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Executables)
