restructure, use PCL viewer

--- a/Executables/Processing/PCDToMesh/CMakeLists.txt
+++ b/Executables/Processing/PCDToMesh/CMakeLists.txt
@@ -1,7 +1,6 @@
-project(CloudGrabberTest)
+project(PCDToMesh)
 
-set(HEADERS
-  CloudGrabberVisualisation.h)
+set(HEADERS)
 
 set(SOURCES
   main.cpp)
@@ -12,4 +11,4 @@ target_link_libraries(${PROJECT_NAME}
   YukariCommon
   ${PCL_LIBRARIES})
 
-set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Executables)
+set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Executables/Processing)
