--- a/Executables/Processing/PointCloudAlignment/CMakeLists.txt
+++ b/Executables/Processing/PointCloudAlignment/CMakeLists.txt
@@ -10,4 +10,4 @@ add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
 target_link_libraries(${PROJECT_NAME}
   YukariCommon)
 
-set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Executables)
+set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Executables/Processing)
